--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
-    <string name="app_name">TripPlannerApp</string>
+    <string name="app_name">Day Tripper</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="google_maps_api_key">AIzaSyAJ-SU54mfYl5yty4SCyNGMZ4BqF-wC2RY</string>
+    <string name="log_in"><u>Log In</u></string>
+    <string name="sign_up"><u>Sign Up</u></string>
+
 </resources>
